--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <section class="query_container">
-        <form>
-            <label for="city">Weather in...</label>
-            <input type="text" id="city" class="input" />
-            <button type="submit" class="btn btn_submit">Search</button>
+    <main>
+    <section class="home_container">
+        <form class="query_container">
+            <label for="city" class="query_label">Weather in ...</label>
+            <div class="query_input">
+                <input type="text" id="city" class="input" />
+                <button type="submit" class="btn_search"><i class="fas fa-search"></i></button>
+            </div>
         </form>
     </section>
     <section class="results_container"></section>
-
+</main>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
