html structure classname update

--- a/index.html
+++ b/index.html
@@ -23,11 +23,22 @@
                         <button type="submit" class="btn_search"><i class="fas fa-search"></i></button>
                     </div>
                 </form>
+                <nav class="week_weather__nav">
+                    <ul>
+                        <li>Day +1</li>
+                        <li>Day +2</li>
+                        <li>Day +3</li>
+                        <li>Day +4</li>
+                        <li>Day +5</li>
+                        <li>Day +6</li>
+                        <li>Day +7</li>
+                    </ul>
+                </nav>
             </section>
         </aside>
         <section class="results_container">
-            <article class="current_weather"></article>
-            <article class="week_weather"></article>
+            <article class="weather_preview"></article>
+            <article class="weather_details"></article>
         </section>
     </main>
 
