--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
         </aside>
         <section class="results_container">
             <article class="current_weather"></article>
-            <article class="week_weather"></article>
+            <article class="parameters_weather">
+                <div class="parameters_weather__temp">
+                    <p class="parameters_weather_temp__city">Barcelona, Spain</p>
+                    <p class="parameters_weather_temp_degrees"></p>
+                </div>
+                <div class="">
+
+                </div>
+            </article>
         </section>
     </main>
 
