Var City Degrees & Feels parameters

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <article class="weather_details">
 
-                <div class="weather_details__temp">
+                <!-- <div class="weather_details__temp">
                     <p class="weather_details_temp__city">Barcelona, Spain</p>
                     <p class="weather_details_temp__degrees">22º</p>
                     <p class="weather_details_temp__feelsLike">Feels like 20º</p>
@@ -66,7 +66,7 @@
                         <img src="http://dummyimage.com/40x40/4d494d/686a82.gif&text=" alt="placeholder+image">
                         <p class="weather_details_info_maxTemp__data">max: 28º</p>
                     </div>
-                </div>
+                </div> -->
             </article>
         </section>
     </main>
