Temperature for Hours Dinamically

--- a/index.html
+++ b/index.html
@@ -44,123 +44,7 @@
 
             <article class="weather_details"></article>
 
-            <article class="weather_hours">
-                <div class="weather_hours__one">
-                    <p class="weather_hours_one__hour">11</p>
-                    <img class="weather_hours_one__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_one__temp">13º</p>
-                </div>
-                <div class="weather_hours__two">
-                    <p class="weather_hours_two__hour">11</p>
-                    <img class="weather_hours_two__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_two__temp">13º</p>
-                </div>
-                <div class="weather_hours__three">
-                    <p class="weather_hours_three__hour">11</p>
-                    <img class="weather_hours_three__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_three__temp">13º</p>
-                </div>
-                <div class="weather_hours__four">
-                    <p class="weather_hours_four__hour">11</p>
-                    <img class="weather_hours_four__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_four__temp">13º</p>
-                </div>
-                <div class="weather_hours__five">
-                    <p class="weather_hours_five__hour">11</p>
-                    <img class="weather_hours_five__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_five__temp">13º</p>
-                </div>
-                <div class="weather_hours__six">
-                    <p class="weather_hours_six__hour">11</p>
-                    <img class="weather_hours_six__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_six__temp">13º</p>
-                </div>
-                <div class="weather_hours__seven">
-                    <p class="weather_hours_seven__hour">11</p>
-                    <img class="weather_hours_seven__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_seven__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-                <div class="weather_hours__eight">
-                    <p class="weather_hours_eight__hour">11</p>
-                    <img class="weather_hours_eight__icon" src="assets/icons/rainy-1.svg" alt="">
-                    <p class="weather_hours_eight__temp">13º</p>
-                </div>
-            </article>
+            <article class="weather_hours"></article>
         </section>
     </main>
 
