Home Screen Basic

--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 
 <body>
     <main>
-        <aside>
-            <i class="fas fa-bars sidebar_toggle"></i>
+        <aside class="aside">
             <section class="sidebar_container">
                 <form class="query_container">
-                    <label for="city" class="query_label">Search weather in ...</label>
+                    <!-- <label for="city" class="query_label">Search weather in ...</label> -->
                     <div class="query_input">
-                        <input type="text" id="city" class="input" />
+                        <input type="text" id="city" class="input" placeholder="Search weather in ..."/>
                         <button type="submit" class="btn_search"><i class="fas fa-search"></i></button>
                     </div>
                 </form>
-                <nav class="week_weather__nav">
+                <!-- <nav class="week_weather__nav">
                     <ul>
                         <li>Day +1</li>
                         <li>Day +2</li>
@@ -35,7 +34,7 @@
                         <li>Day +6</li>
                         <li>Day +7</li>
                     </ul>
-                </nav>
+                </nav> -->
             </section>
         </aside>
 
